# fifo-dev-dsl

./: .gitignore  README.md  pyproject.toml  setup.sh
.github/workflows/: test.yml
fifo_dev_dsl/common/: dsl_utils.py  logger.py
fifo_dev_dsl/dia/: README.md
fifo_dev_dsl/dia/demo/: calculator.py  calculator_eval_performance.py  calculator_synthetic_data_generator.py  robot_arm.py  robot_arm_eval_performance.py
fifo_dev_dsl/dia/resolution/: context.py  enums.py  interaction.py  llm_call_log.py  outcome.py  resolver.py
fifo_dev_dsl/dia/runtime/: __init__.py  async_evaluator.py  context.py  evaluation_outcome.py  evaluator.py  exceptions.py  process.py
fifo_dev_dsl/domain_specific/: README.md
fifo_dev_dsl/domain_specific/common/: dsl_utils.py
fifo_dev_dsl/domain_specific/mini_date_converter_dsl/: README.md  core.py  evaluate_mini_date_converter_dsl_model.py
fifo_dev_dsl/domain_specific/mini_recurrence_converter_dsl/: README.md  core.py  evaluate_mini_recurrence_converter_dsl_model.py  generate_synthetic_data.py
tests/: test_dsl_utils.py  test_mini_date_converter_dsl.py  test_mini_recurrence_converter_dsl.py
tests/common/: test_common_dsl_utils.py  test_dsl_utils.py
tests/dia/: test_async_evaluator.py  test_base.py  test_eval.py  test_evaluator.py  test_exceptions.py  test_fully_resolve_in_text_mode.py  test_is_resolved.py  test_parser.py  test_pretty_print.py  test_query_elements.py  test_resolution_context.py  test_resolution_outcome.py
tests/domain_specific/: test_dsl_utils.py  test_mini_date_converter_dsl.py  test_mini_recurrence_converter_dsl.py
(+26 files in other folders)
